# TestELF

./: .gitignore  CMakeLists.txt  clean.sh  run_android.sh  run_linux.sh  run_macos.sh
App/: CMakeLists.txt  main.cpp
SDK1/: CMakeLists.txt  libSDK1.cpp  libSDK1.h
SDK2/: CMakeLists.txt  libSDK2.cpp  libSDK2.h
SDK3/: CMakeLists.txt  libSDK3.cpp
